# controllers/account.go
@@ -86,7 +86,7 @@ func (c *ApiController) Signup() {
 		return
 	}
 
-	if !application.EnableSignUp {
+	if !application.EnableInternalSignUp && !application.EnableIdpSignUp {
 		c.ResponseError(c.T("account:The application does not allow to sign up new account"))
 		return
 	}
